k8s/20-patient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  namespace: saude-poc
  labels: { app: patient-service }
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector: { app: patient-service }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
  namespace: saude-poc
  labels: { app: patient-service }
spec:
  replicas: 2          # RNF-02
  selector:
    matchLabels: { app: patient-service }
  template:
    metadata:
      labels: { app: patient-service, version: v1 }
      annotations:                            # RNF-04: metricas de aplicacao
        prometheus.io/scrape: "true"           # o istio-agent faz merge com as metricas do Envoy
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8081"
    spec:
      containers:
        - name: patient-service
          image: saude-publica-poc-patient-service:latest
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8081 }]
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8081 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8081 }
            initialDelaySeconds: 60
            periodSeconds: 30
          resources:
            requests: { cpu: "250m", memory: "512Mi" }
            limits:   { cpu: "1000m", memory: "1Gi" }
